exports[`no-callback-and-promise > invalid(1): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(1): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done) => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(2): import {test, beforeEach} from 'node:test';\ntest(\"x\", async function (t, done) { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async function (t, done) { done(); });

`;

exports[`no-callback-and-promise > invalid(2): import {test, beforeEach} from 'node:test';\ntest(\"x\", async function (t, done) { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async function (t, done) { done(); });
    |                              ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(3): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | beforeEach(async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(3): import {test, beforeEach} from 'node:test';\nbeforeEach(async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | beforeEach(async (t, done) => { done(); });
    |                      ^^^^ A hook cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(4): import {it} from 'node:test';\nit(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(4): import {it} from 'node:test';\nit(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", async (t, done) => { done(); });
    |                   ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(5): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", async (t, done) => { done(); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", async (t, done) => { done(); });

`;

exports[`no-callback-and-promise > invalid(5): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", async (t, done) => { done(); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", async (t, done) => { done(); });
    |                              ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(6): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done, extra) => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done, extra) => { done(); });

`;

exports[`no-callback-and-promise > invalid(6): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done, extra) => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done, extra) => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;

exports[`no-callback-and-promise > invalid(7): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done): Promise<void> => { done(); }); 1`] = `

  1 | import {test, beforeEach} from 'node:test';
  2 | test("x", async (t, done): Promise<void> => { done(); });

`;

exports[`no-callback-and-promise > invalid(7): import {test, beforeEach} from 'node:test';\ntest(\"x\", async (t, done): Promise<void> => { done(); }); 2`] = `

Message:
  1 | import {test, beforeEach} from 'node:test';
> 2 | test("x", async (t, done): Promise<void> => { done(); });
    |                     ^^^^ A test cannot use both a callback parameter and a Promise; this \`async\` function also declares a callback.

`;
